--- a/index.html
+++ b/index.html
@@ -4,37 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
-    <title>注册</title>
+    <title>恋恋有财</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
-    <meta name="description" content="花小旗智能投顾————为理财经理快速了解客户信息及产品推荐提供参考，降低经理工作量">
-    <meta name="keywords" content="理财经理,降低经理工作量,花小旗,智能投顾,花旗银行,花旗杯">
+    <meta name="description" content="恋恋有财————脱单又脱贫">
+    <meta name="keywords" content="一周CP,CP,恋恋有财,查询">
     <meta name="author" content="Tony Xia">
     <link rel="icon" href="images/sufe.ico" type="images/x-ico" />
 
-    <link rel="stylesheet" type="text/css" href="css/head.css">
-    <link rel="stylesheet" type="text/css" href="./js/zui/css/zui-theme.css" />
-    <link rel="stylesheet" type="text/css" href="./js/zui/css/zui.css" />
-    <link rel="stylesheet" type="text/css" href="./js/zui/lib/chosen/chosen.min.css" />
-    <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
+    <link href="css/animate.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/isotope.css" media="screen" />
-    <link rel="stylesheet" href="js/fancybox/jquery.fancybox.css" type="text/css" media="screen" />
-    <link href="css/animate.css" rel="stylesheet" media="screen">
-    <script src="js/modernizr-latest.js"></script>
     <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-    <script src="js/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/jquery.isotope.min.js" type="text/javascript"></script>
     <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
     <script src="js/jquery.nav.js" type="text/javascript"></script>
-    <script src="js/jquery.fittext.js"></script>
     <script src="js/waypoints.js"></script>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/custom.js" type="text/javascript"></script>
-    <script src="js/owl-carousel/owl.carousel.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     <!--字体-->
     <link href="font/css/font-awesome.min.css" rel="stylesheet">
@@ -45,7 +34,7 @@
     <script>
         $(document).ready(function() {
             $('body').particleground({
-                dotColor: '#f6464a',
+                dotColor: '#FF0000',
                 lineColor: '#f6464a'
             });
         });
@@ -64,6 +53,7 @@
         </div>
     </header>
 
+    <div style="height: 90px;" class="visible-xs"></div>
     <div class="container">
         <div class="hidden-xs col-md-6" id="left">
             <div style=" margin-top: 25%;padding: 40px;border-radius: 5px;">
@@ -71,7 +61,7 @@
                     <h1 style="color: rgb(255, 0, 76);">脱贫又脱单</h1>
                 </div>
                 <h3>我们乐于听取对产品的各种意见。</h3>
-                <p style="color: aliceblue;">对恋恋有财有任何意见和建议请在这里联系我们。</p>
+                <p>对恋恋有财有任何意见和建议请在这里联系我们。</p>
                 <div class=" wow fadeInRight animated" data-wow-delay="0.2s">
                     <form id="contact-form" action="#" name="contactform" method="post" class="contact-form">
                         <div class="row parlex-back">
@@ -82,7 +72,7 @@
                                 <input type="text" name="email" id="email" class="form-control" placeholder="邮箱" />
                             </div>
                         </div>
-                        <div style="margin-top: -50px;" class="row parlex-back">
+                        <div class="row parlex-back">
                             <div class="col-md-12">
                                 <textarea name="comments" id="comments" cols="30" rows="10" class="form-control" placeholder="您的留言"></textarea>
                             </div>
@@ -98,25 +88,25 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 admin_login" id="right" style=" margin-top: 25%;">
-            <div>
+        <div class="col-md-6 admin_login" id="right">
+            <div id=“vanish”>
                 <form>
-                    <h1 style="color:cornsilk; text-align: center;">请输入查询条件</h1>
+                    <h1 style="color:#ebedf4; text-align: center;">请输入查询条件</h1>
                     <br>
-                    <span style="color: #fff;text-align: center;">有问题请联系13917768723</span>
+                    <span style="color: #ededed;text-align: center;">有问题请联系13917768723</span>
                     <div style="height: 20px;"></div>
-                    <input type="text" name="id" datatype="required" placeholder="请输入学号" style="background: rgba(255, 255, 255, 0.1);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                    <input type="text" name="id" datatype="required" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                     <div style="height: 20px;"></div>
-                    <input type="text" name="name" datatype="required" placeholder="请输入姓名" style="background: rgba(255, 255, 255, 0.1);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                    <input type="text" name="name" datatype="required" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                     <div style="height: 50px;"></div>
-                    <div style="text-align: center;"><button style="text-align: center;">CP查询</button></div>
+                    <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
                 </form>
             </div>
         </div>
     </div>
 
 
-    <footer style="background-color: #161616;">
+    <footer style="padding: 10px;">
         <div class="container">
             <div class="social text-center" style="background-color: rgba(255, 255, 255, 0.1);">
                 <a href="#"><i class="fa fa-qq"></i></a>
