--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
     <link href="css/animate.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="js/jquery.isotope.min.js" type="text/javascript"></script>
     <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
     <script src="js/jquery.nav.js" type="text/javascript"></script>
@@ -90,17 +90,15 @@
         </div>
         <div class="col-md-6 admin_login" id="right">
             <div id=“vanish”>
-                <form>
-                    <h1 style="color:#ebedf4; text-align: center;">请输入查询条件</h1>
-                    <br>
-                    <span style="color: #ededed;text-align: center;">有问题请联系13917768723</span>
-                    <div style="height: 20px;"></div>
-                    <input type="text" name="id" datatype="required" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
-                    <div style="height: 20px;"></div>
-                    <input type="text" name="name" datatype="required" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
-                    <div style="height: 50px;"></div>
-                    <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
-                </form>
+                <h1 style="color:#ebedf4; text-align: center;">请输入查询条件</h1>
+                <br>
+                <span style="color: #ededed;text-align: center;">有问题请联系13917768723</span>
+                <div style="height: 20px;"></div>
+                <input type="text" name="id" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <div style="height: 20px;"></div>
+                <input type="text" name="name" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <div style="height: 50px;"></div>
+                <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
             </div>
         </div>
     </div>
