--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             });
         });
     </script>
-
+    <!--查询-->
+    <script src="js/look_up.js"></script>
 </head>
 
 <body>
@@ -93,9 +94,9 @@
                 <br>
                 <span style="color: #ededed;text-align: center;">有问题请联系13917768723</span>
                 <div style="height: 20px;"></div>
-                <input type="text" name="id_right" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <input type="text" name="id" id="id_right" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 20px;"></div>
-                <input type="text" name="name_right" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <input type="text" name="name" id="name_right" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 50px;"></div>
                 <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
             </div>
@@ -115,8 +116,6 @@
             <div class="clear"></div>
         </div>
     </footer>
-    <!--查询-->
-    <script src="js/look_up.js"></script>
 </body>
 
 </html>
