--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <span class="pori-btn">
-                                    <input type="submit" class="submit-btn" id="submit" value="发送" />
+                                    <input type="submit" class="submit-btn" id="submit" onclick="initdata()" value="发送" />
                                 </span>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                 <div style="height: 20px;"></div>
                 <input type="text" name="name" id="name_right" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 50px;"></div>
-                <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
+                <div style="text-align: center;"><button style="text-align: center; " onclick="warning()">CP查询</button></div>
             </div>
         </div>
     </div>
