--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
     <footer style="padding: 10px;">
         <div class="container">
             <div class="social text-center" style="background-color: rgba(255, 255, 255, 0.1);">
-                <a href="t_k_tonny" target="_blank"><i class="fa fa-qq"></i></a>
-                <a href="t_k_tonny" target="_blank"><i class="fa fa-envelope"></i></a>
-                <a href="t_k_tonny" target="_blank"><i class="fa fa-weixin"></i></a>
+                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-qq"></i></a>
+                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-envelope"></i></a>
+                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-weixin"></i></a>
                 <a href="https://github.com/tktonny" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="https://haoma.baidu.com/phoneSearch?search=13917768723" target="_blank"><i class="fa fa-phone"></i></a>
             </div>
