--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
         <div class="col-md-6 admin_login" id="right">
-            <div id=“vanish”>
+            <div id="vanish">
                 <h1 style="color:#ebedf4; text-align: center;">请输入查询条件</h1>
                 <br>
                 <span style="color: #ededed;text-align: center;">有问题请联系13917768723<small style="color: #fff;text-align: center;">请不要在上课时段拨打电话<small></small></span>
