--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h3>我们乐于听取对产品的各种意见。</h3>
                 <p>对恋恋有财有任何意见和建议请在这里联系我们。</p>
                 <div class=" wow fadeInRight animated" data-wow-delay="0.2s">
-                    <form id="contact-form" action="#" name="contactform" method="post" class="contact-form">
+                    <form id="contact-form" action="https://formspree.io/f/xyybjgwa" name="contactform" method="post" class="contact-form">
                         <div class="row parlex-back">
                             <div class="col-md-6">
                                 <input type="text" name="name" id="name" class="form-control" placeholder="姓名" />
@@ -79,7 +79,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <span class="pori-btn">
-                                    <input type="submit" class="submit-btn" id="submit" onclick="warning()" value="发送" />
+                                    <input type="submit" class="submit-btn" id="submit"  value="发送" />
                                 </span>
                             </div>
                         </div>
