--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
     <meta name="description" content="恋恋有财————脱单又脱贫">
     <meta name="keywords" content="一周CP,CP,恋恋有财,查询">
     <meta name="author" content="Tony Xia">
-    <link rel="icon" href="images/sufe.ico" type="images/x-ico" />
+    <link rel="icon" href="./images/sufe.ico" type="images/x-ico" />
 
     <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
-    <link href="css/animate.css" rel="stylesheet" media="screen">
+    <link href="./css/animate.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script src="./js/jquery-1.8.2.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/jquery.isotope.min.js" type="text/javascript"></script>
-    <script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-    <script src="js/jquery.nav.js" type="text/javascript"></script>
-    <script src="js/waypoints.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <script src="./js/jquery.isotope.min.js" type="text/javascript"></script>
+    <script src="./js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+    <script src="./js/jquery.nav.js" type="text/javascript"></script>
+    <script src="./js/waypoints.js"></script>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <!--字体-->
-    <link href="font/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./font/css/font-awesome.min.css" rel="stylesheet">
     <!--粒子背景特效-->
-    <link rel="stylesheet" type="text/css" href="css/dmaku.css" />
-    <link rel="stylesheet" type="text/css" href="css/dmaku2.css" />
-    <script src="js/Particleground.js" tppabs="js/Particleground.js"></script>
+    <link rel="stylesheet" type="text/css" href="./css/dmaku.css" />
+    <link rel="stylesheet" type="text/css" href="./css/dmaku2.css" />
+    <script src="./js/Particleground.js" tppabs="js/Particleground.js"></script>
     <script>
         $(document).ready(function() {
             $('body').particleground({
@@ -47,7 +47,7 @@
         <div class="container">
             <nav class="navbar navbar-inverse" role="navigation">
                 <div class="navbar-header">
-                    <a href="index.html" class="navbar-brand scroll-top logo  animated bounceInLeft"><b>恋恋<i>有财</i></b></a> </div>
+                    <a href="./index.html" class="navbar-brand scroll-top logo  animated bounceInLeft"><b>恋恋<i>有财</i></b></a> </div>
             </nav>
         </div>
     </header>
@@ -102,15 +102,15 @@
         </div>
     </div>
     <!--查询-->
-    <script src="js/look_up.js"></script>
+    <script src="./js/look_up.js"></script>
 
 
     <footer style="padding: 10px;">
         <div class="container">
             <div class="social text-center" style="background-color: rgba(255, 255, 255, 0.1);">
-                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-qq"></i></a>
-                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-envelope"></i></a>
-                <a href="t_k_tonny.html" target="_blank"><i class="fa fa-weixin"></i></a>
+                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-qq"></i></a>
+                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-envelope"></i></a>
+                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-weixin"></i></a>
                 <a href="https://github.com/tktonny" target="_blank"><i class="fa fa-github"></i></a>
                 <a href="https://haoma.baidu.com/phoneSearch?search=13917768723" target="_blank"><i class="fa fa-phone"></i></a>
             </div>
