--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
         </div>
         <div class="col-md-6 admin_login" id="right">
             <div id="vanish">
-                <h1 style="color:#ebedf4; text-align: center;">请输入查询条件</h1>
+                <h1 style="color:#ebedf4; text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
                 <br>
-                <span style="color: #ededed;text-align: center;">有问题请联系13917768723<small style="color: #fff;text-align: center;">请不要在上课时段拨打电话<small></small></span>
+                <span style="color: #ededed;text-align: center;">关注恋恋有财，获取更多活动信息</span>
                 <div style="height: 20px;"></div>
                 <input type="text" name="id" id="id_right" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 20px;"></div>
-                <input type="text" name="name" id="name_right" placeholder="请输入姓名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <input type="text" name="wechat" id="name_right" placeholder="请输入微信名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 50px;"></div>
                 <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
             </div>
