--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
     <!--粒子背景特效-->
     <link rel="stylesheet" type="text/css" href="./css/dmaku.css" />
     <link rel="stylesheet" type="text/css" href="./css/dmaku2.css" />
-    <script src="./js/Particleground.js" tppabs="js/Particleground.js"></script>
-    <script>
-        $(document).ready(function() {
-            $('body').particleground({
-                dotColor: '#FF0000',
-                lineColor: '#f6464a'
-            });
-        });
-    </script>
+
 
 </head>
 
@@ -89,13 +81,13 @@
         </div>
         <div class="col-md-6 admin_login" id="right">
             <div id="vanish">
-                <h1 style="color:#ebedf4; text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
+                <h1 style="color:#000; text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
                 <br>
-                <span style="color: #ededed;text-align: center;">关注恋恋有财，获取更多活动信息</span>
+                <span style="color: #000;text-align: center;">关注恋恋有财，获取更多活动信息</span>
                 <div style="height: 20px;"></div>
                 <input type="text" name="id" id="id_right" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 20px;"></div>
-                <input type="text" name="wechat" id="name_right" placeholder="请输入微信名" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
+                <input type="text" name="wechat" id="name_right" placeholder="请输入微信号" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
                 <div style="height: 50px;"></div>
                 <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
             </div>
@@ -103,20 +95,6 @@
     </div>
     <!--查询-->
     <script src="./js/look_up.js"></script>
-
-
-    <footer style="padding: 10px;">
-        <div class="container">
-            <div class="social text-center" style="background-color: rgba(255, 255, 255, 0.1);">
-                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-qq"></i></a>
-                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-envelope"></i></a>
-                <a href="./t_k_tonny.html" target="_blank"><i class="fa fa-weixin"></i></a>
-                <a href="https://github.com/tktonny" target="_blank"><i class="fa fa-github"></i></a>
-                <a href="https://haoma.baidu.com/phoneSearch?search=13917768723" target="_blank"><i class="fa fa-phone"></i></a>
-            </div>
-            <div class="clear"></div>
-        </div>
-    </footer>
 </body>
 
 </html>
