--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
     <meta name="keywords" content="一周CP,CP,恋恋有财,查询">
     <meta name="author" content="Tony Xia">
     <link rel="icon" href="./images/sufe.ico" type="images/x-ico" />
-
-    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
-    <link href="./css/animate.css" rel="stylesheet" media="screen">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="./js/jquery-1.8.2.min.js" type="text/javascript"></script>
+    <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
     <script src="./js/jquery.isotope.min.js" type="text/javascript"></script>
     <script src="./js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
@@ -30,7 +28,17 @@
     <!--粒子背景特效-->
     <link rel="stylesheet" type="text/css" href="./css/dmaku.css" />
     <link rel="stylesheet" type="text/css" href="./css/dmaku2.css" />
-
+    <link rel="stylesheet" type="text/css" href="./css/1.css" />
+    <link rel="stylesheet" type="text/css" href="./css/2.css" />
+    <script src="./js/Particleground.js" tppabs="js/Particleground.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('body').particleground({
+                dotColor: '#ff899a',
+                lineColor: '#ff899a'
+            });
+        });
+    </script>
 
 </head>
 
@@ -45,8 +53,9 @@
     </header>
 
     <div style="height: 90px;" class="visible-xs"></div>
+
     <div class="container">
-        <div class="hidden-xs col-md-6" id="left">
+        <div class="visible-lg col-md-6" id="left">
             <div style=" margin-top: 25%;padding: 40px;border-radius: 5px;">
                 <div class="logo-title">
                     <h1 style="color: rgb(255, 0, 76);">脱贫又脱单</h1>
@@ -79,19 +88,57 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-6 admin_login" id="right">
-            <div id="vanish">
-                <h1 style="color:#000; text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
-                <br>
-                <span style="color: #000;text-align: center;">关注恋恋有财，获取更多活动信息</span>
-                <div style="height: 20px;"></div>
-                <input type="text" name="id" id="id_right" placeholder="请输入学号" style="background: rgba(0, 0, 0, 0.5);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
-                <div style="height: 20px;"></div>
-                <input type="text" name="wechat" id="name_right" placeholder="请输入微信号" style="background: rgba(0, 0, 0, 0.4);border: none;padding: 12px 15px;margin: 8px 0;width: 100%;outline: none;">
-                <div style="height: 50px;"></div>
-                <div style="text-align: center;"><button style="text-align: center; " onclick="initdata()">CP查询</button></div>
+        <div class="col-md-6" id="right">
+
+            <br>
+            <br>
+            <h1 style="color:rgb(100, 99, 99); text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
+
+            <div class="index_card__3l_i4 index_displayCard__1-3Kb">
+                <div class="index_displayCardTitle__L0l1S">
+                    <a href="#"><i class="fa fa-user-circle"></i></a>账号信息</div>
+                <div class="index_displayCardContent__3J3lN">
+                    <div class="Item_formItem__1u0yT">
+                        <div class="Item_formItemLabel__21cKJ">学生证号：</div>
+                        <div class="Item_formItemContent__ByW4i">
+                            <div class="index_formInputGroupContent__1ERpf">
+                                <div class="index_formInputGroupInputWrapper__3icys">
+                                    <div class="index_inputWrapper__Du7MC index_default__3LVnT">
+                                        <input type="text" name="id" id="id_right" class="index_input__JggqB" name="account" placeholder="请输入学号" tabindex="1" style="text-align:start" autocomplete="on"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="Item_formItemLabel__21cKJ">微信号：</div>
+                        <div class="Item_formItemContent__ByW4i">
+                            <div class="index_formInputGroupContent__1ERpf">
+                                <div class="index_formInputGroupInputWrapper__3icys">
+                                    <div class="index_inputWrapper__Du7MC index_default__3LVnT">
+                                        <input type="text" name="wechat" id="name_right" placeholder="请输入微信号" class="index_input__JggqB" name="account" placeholder="请输入学号" tabindex="1" style="text-align:start" autocomplete="on"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="Item_formItemErrorMessage__1fmbI"></div>
+                    </div>
+                    <div class="Item_formItem__1u0yT" style="padding: 20px" id="vanish">
+                        <div class="Item_formItemContent__ByW4i">
+                            <div class="index_formInputGroupButtonWrapper__3wEMv">
+                                <label class="index_buttonWrapper__1YBqi index_type-primary__xERrQ" style="height: 30px;">
+                                            <button hidden="" type="button" onclick="initdata()">button</button>
+                                            <span class="index_buttonText__34v_5" style="margin-top: 10px;">CP查询</span>
+                                            <span class="index_loadingIcon__3LLwH"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="Item_formItemErrorMessage__1fmbI"></div>
+                </div>
             </div>
+            <span style="color: #000;text-align: center;">关注恋恋有财，获取更多活动信息</span>
         </div>
+    </div>
+    </div>
+    <div id="look_up">
+
     </div>
     <!--查询-->
     <script src="./js/look_up.js"></script>
