--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
                     <div class="Item_formItemErrorMessage__1fmbI"></div>
                 </div>
             </div>
+            <div class="index_card__3l_i4 index_displayCard__1-3Kb" id="look_up"></div>
             <span style="color: #000;text-align: center;">关注恋恋有财，获取更多活动信息</span>
         </div>
     </div>
     </div>
-    <div id="look_up">
+
 
     </div>
     <!--查询-->
