--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="恋恋有财————脱单又脱贫">
     <meta name="keywords" content="一周CP,CP,恋恋有财,查询">
     <meta name="author" content="Tony Xia">
-    <link rel="icon" href="./images/sufe.ico" type="images/x-ico" />
+    <link rel="icon" href="./img/logo.ico" type="images/x-ico" />
     <script src="./js/jquery-1.8.2.min.js" type="text/javascript"></script>
     <script src="https://cdn.bootcss.com/echarts/4.4.0-rc.1/echarts.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
