--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </div>
         <div class="col-md-6" id="right">
 
-            <br>
-            <br>
+            <br class="hidden-xs">
+            <br class="hidden-xs">
             <h1 style="color:rgb(100, 99, 99); text-align: center;font-size: 25px;">SUFE一周CP第1期</h1>
             <br>
             <div class="index_card__3l_i4 index_displayCard__1-3Kb">
