--- a/index.html
+++ b/index.html
@@ -119,14 +119,16 @@
                         </div>
                         <div class="Item_formItemErrorMessage__1fmbI"></div>
                     </div>
-                    <div class="Item_formItem__1u0yT" id="vanish">
-                        <div class="Item_formItemContent__ByW4i" style="padding: 20px">
-                            <div class="index_formInputGroupButtonWrapper__3wEMv">
-                                <label class="index_buttonWrapper__1YBqi index_type-primary__xERrQ" style="height: 30px;">
+                    <div id="vanish">
+                        <div class="Item_formItem__1u0yT" style="padding: 20px">
+                            <div class="Item_formItemContent__ByW4i" style="padding: 20px">
+                                <div class="index_formInputGroupButtonWrapper__3wEMv">
+                                    <label class="index_buttonWrapper__1YBqi index_type-primary__xERrQ" style="height: 30px;">
                                             <button hidden="" type="button" onclick="initdata()">button</button>
                                             <span class="index_buttonText__34v_5" style="margin-top: 10px;">CP查询</span>
                                             <span class="index_loadingIcon__3LLwH"></span>
                                 </label>
+                                </div>
                             </div>
                         </div>
                     </div>
