--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <br>
             <br class="hidden-xs">
             <br class="hidden-xs">
-            <h1 style="color:rgb(100, 99, 99); text-align: center;font-size: 25px;">SUFE一周CP特别篇 day1</h1>
+            <h1 style="color:rgb(100, 99, 99); text-align: center;font-size: 25px;">恋恋君的一周CP特别篇 day1</h1>
             <br>
             <div class="index_card__3l_i4 index_displayCard__1-3Kb">
                 <div class="index_displayCardTitle__L0l1S">
